Fix hover box-shadow with overflow-clip-margin

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -567,7 +567,7 @@ button {
     margin-top: 135px;
     padding: 96px 0;
     background: #FFFCF4;
-    /* overflow-x: clip; */
+    
 }
 
 .blog-top {
@@ -587,6 +587,7 @@ button {
     gap: 30px;
     margin-top: 55px;
     overflow-x: clip;
+    overflow-clip-margin: 20px;
 }
 
 .blog-list .blog-item {
